--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -22,5 +22,5 @@ jobs:
       run:  docker network create quote-network
     - name: Create Docker Container with repective images & network
       run:  | 
-        docker run -d --name gen -p 5000:5000 --network quote-network quote-gen
-        docker run -d --name disp -p 5001:5001 --link gen:gen --network quote-network quote-dis
+        docker run -d --name gen -p 5000:5000 --network quote-network gen:$(date +%s)
+        docker run -d --name disp -p 5001:5001 --link gen:gen --network quote-network disp:$(date +%s)
