container images issue resolve

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -14,13 +14,13 @@ jobs:
     - name: Build the Docker image in respective Directories
       run: |
         cd quote_disp
-        docker build . --file Dockerfile --tag dis:$(date +%s)
+        docker build . --file Dockerfile --tag dis:v1
         cd ..
         cd quote_gen
-        docker build . --file Dockerfile --tag gen:$(date +%s)
+        docker build . --file Dockerfile --tag gen:v1
     - name: Create Docker Network
       run:  docker network create quote-network
     - name: Create Docker Container with repective images & network
       run:  | 
-        docker run -d --name gen -p 5000:5000 --network quote-network gen
-        docker run -d --name disp -p 5001:5001 --link gen:gen --network quote-network dis
+        docker run -d --name gen -p 5000:5000 --network quote-network gen:v1
+        docker run -d --name disp -p 5001:5001 --link gen:gen --network quote-network dis:v1
